FIXED NAVBAR ISSUE ON NARROW MOBILE DEVICES

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -350,6 +350,46 @@ padding-top: 3%;
 padding-bottom: 3%;
 }
 }
+@media only screen and (max-width: 440px) {  /*--Narrow Mobiles--*/
+    .navbar-brand {
+        font-family: 'Lunasima', sans-serif;
+        font-size: 22px;
+        font-weight: 600;
+        color: white;
+        padding-top: 5%;
+        padding-bottom: 5%;
+    }
+
+    .navbar-brand img {
+        max-height: 45px;
+        margin-left: -5%
+    }
+
+    .email-form {
+        font-size: 0.75rem;
+    }
+
+    .register-btn {
+        border-radius: 12px;
+        border: none;
+        color: white;
+        padding: 1rem;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin-top: 5%;
+        margin-bottom: 5%;
+        cursor: pointer;
+    }
+
+    .container {
+        padding-left: 2.5%;
+        margin: 0;
+        padding-top: 3%;
+        padding-bottom: 3%;
+    }
+}
 /*---Media Query Tablet--*/
 @media (min-width: 992px) {
 .news-image {
